force-app/main/default/objects/Opportunity_Actor__c/Opportunity_Actor__c.object-meta.xml
<CustomObject>
    <description>Nos sirve para identificar todos los actores (contactos) que van a colaborar en un proyecto (Oportunidad). Únicamente los marcados como principales son los que más adelante van a poder realizar Quotes (Pedidos SAP) en el sistema.</description>
    <label>Opportunity Actor</label>
    <nameField>
        <displayFormat>Actor-{000000}</displayFormat>
        <label>Actors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Actors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>