force-app/main/default/objects/Opportunity_Actor__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <label>Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Bath installer</fullName>
                <label>Bath installer / plumber</label>
            </value>
            <value>
                <fullName>Designer</fullName>
                <label>Designer/Interior Designer</label>
            </value>
            <value>
                <fullName>Developer / Owner</fullName>
            </value>
            <value>
                <fullName>Fabricator</fullName>
            </value>
            <value>
                <fullName>Facade consultant</fullName>
            </value>
            <value>
                <fullName>Facade Installer</fullName>
            </value>
            <value>
                <fullName>Flooring installer</fullName>
                <label>Flooring installer / tiler</label>
            </value>
            <value>
                <fullName>General / Main Contactor</fullName>
            </value>
            <value>
                <fullName>Kitchen installer</fullName>
                <label>Kitchen installer / fitter</label>
            </value>
            <value>
                <fullName>Procurement Consultant</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Other Consultants</fullName>
            </value>
            <value>
                <fullName>Interior designer</fullName>
                <isActive>false</isActive>
                <label>Interior designer</label>
            </value>
            <value>
                <fullName>Other (indicate)</fullName>
                <isActive>false</isActive>
                <label>Other (indicate)</label>
            </value>
            <value>
                <fullName>Site Manager</fullName>
                <isActive>false</isActive>
                <label>Site Manager</label>
            </value>
            <value>
                <fullName>Various Subcontractors</fullName>
                <isActive>false</isActive>
                <label>Various Subcontractors</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>