force-app/main/default/objects/Opportunity_Actor__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <defaultValue>null</defaultValue>
    <description>Holds tips about what was wrong on the opp actor process</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>