force-app/main/default/objects/Opportunity_Actor__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Oportunidad (Proyecto) a la que pertenece.</description>
    <inlineHelpText>Opportunity to which it belongs</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Actors</relationshipLabel>
    <relationshipName>Opportunity_Actors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>