force-app/main/default/objects/Opportunity_Actor__c/fields/Other_Account_role__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_role__c</fullName>
    <label>Other Account role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>