force-app/main/default/objects/Opportunity_Actor__c/fields/Other_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Role__c</fullName>
    <label>Other Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>