force-app/main/default/objects/Opportunity_Actor__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Indica el rol con el que va a actuar el Actor (contacto) en el Proyecto (Oportunidad)</description>
    <inlineHelpText>Indicates the role with which the Actor will act (contact) in the Opportunity</inlineHelpText>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin. de Fincas</fullName>
                <isActive>false</isActive>
                <label>Admin. de Fincas</label>
            </value>
            <value>
                <fullName>Administrativo de obra</fullName>
                <isActive>false</isActive>
                <label>Administrativo de obra</label>
            </value>
            <value>
                <fullName>Albañil</fullName>
                <isActive>false</isActive>
                <label>Albañil</label>
            </value>
            <value>
                <fullName>Aparejador</fullName>
                <isActive>false</isActive>
                <label>Aparejador</label>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Architect of record</fullName>
                <isActive>false</isActive>
                <label>Architect of record</label>
            </value>
            <value>
                <fullName>Bath Installer</fullName>
                <isActive>false</isActive>
                <label>Bath Installer</label>
            </value>
            <value>
                <fullName>Carpintero</fullName>
                <isActive>false</isActive>
                <label>Carpintero</label>
            </value>
            <value>
                <fullName>Chapador</fullName>
                <isActive>false</isActive>
                <label>Chapador</label>
            </value>
            <value>
                <fullName>Comisionista</fullName>
                <isActive>false</isActive>
                <label>Comisionista</label>
            </value>
            <value>
                <fullName>Commission agent</fullName>
                <isActive>false</isActive>
                <label>Commission agent</label>
            </value>
            <value>
                <fullName>Constructor</fullName>
                <isActive>false</isActive>
                <label>Constructor</label>
            </value>
            <value>
                <fullName>Constructores</fullName>
                <isActive>false</isActive>
                <label>Constructores</label>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Contacto de obra</fullName>
                <isActive>false</isActive>
                <label>Contacto de obra</label>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Contractor</fullName>
                <isActive>false</isActive>
                <label>Contractor</label>
            </value>
            <value>
                <fullName>Coordinador</fullName>
                <isActive>false</isActive>
                <label>Coordinador</label>
            </value>
            <value>
                <fullName>Designer</fullName>
                <isActive>false</isActive>
                <label>Designer</label>
            </value>
            <value>
                <fullName>Developer</fullName>
                <isActive>false</isActive>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Developer  / Owner</fullName>
            </value>
            <value>
                <fullName>Diseñador</fullName>
                <isActive>false</isActive>
                <label>Diseñador</label>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
                <isActive>false</isActive>
                <label>Distribuidor</label>
            </value>
            <value>
                <fullName>Electricista</fullName>
                <isActive>false</isActive>
                <label>Electricista</label>
            </value>
            <value>
                <fullName>Encargado de Obra</fullName>
                <isActive>false</isActive>
                <label>Encargado de Obra</label>
            </value>
            <value>
                <fullName>Fábrica</fullName>
                <isActive>false</isActive>
                <label>Fábrica</label>
            </value>
            <value>
                <fullName>Fabricante</fullName>
                <isActive>false</isActive>
                <label>Fabricante</label>
            </value>
            <value>
                <fullName>Fabricator</fullName>
            </value>
            <value>
                <fullName>Facade consultant</fullName>
                <isActive>false</isActive>
                <label>Facade consultant</label>
            </value>
            <value>
                <fullName>Facade installer</fullName>
                <isActive>false</isActive>
                <label>Facade installer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>