force-app/main/default/objects/Opportunity_Actor__c/fields/SAP_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Status__c</fullName>
    <label>SAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undefined</fullName>
                <default>true</default>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>