force-app/main/default/objects/Opportunity_Actor__c/validationRules/Account_locked_or_delete.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_locked_or_delete</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(),
    OR(
    Account__r.Is_Locked__c = True,
    Account__r.Is_Deleted__c  = True)
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Can&apos;t create new actors because the account is deleted or locked.</errorMessage>
</ValidationRule>