force-app/main/default/objects/Opportunity_Actor__c/validationRules/Account_role_fabricator.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_role_fabricator</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Account__r.RT_Name_ANA_Form__c =&apos;Fabricator&apos; ,   NOT(ISPICKVAL(Account_Role__c, &apos;Fabricator&apos;)))</errorConditionFormula>
    <errorDisplayField>Account_Role__c</errorDisplayField>
    <errorMessage>The classification of a fabricator account must be fabricator</errorMessage>
</ValidationRule>