force-app/main/default/objects/Opportunity_Actor__c/validationRules/Account_role_reseller.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_role_reseller</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Account__r.RT_Name_ANA_Form__c =&apos;Reseller&apos; , NOT(ISPICKVAL(Account_Role__c, &apos;Reseller&apos;)))</errorConditionFormula>
    <errorDisplayField>Account_Role__c</errorDisplayField>
    <errorMessage>The classification of a reseller account must be reseller</errorMessage>
</ValidationRule>