force-app/main/default/objects/Opportunity_Actor__c/validationRules/Change_of_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_of_Opportunity</fullName>
    <active>true</active>
    <description>The Opportunity cannot be changed</description>
    <errorConditionFormula>AND(ISNEW(), NOT(Opportunity__r.Id = Opportunity__c) )</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>The Opportunity cannot be changed</errorMessage>
</ValidationRule>