force-app/main/default/objects/Opportunity_Actor__c/validationRules/Contact_role_fabricator.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_role_fabricator</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Contact_Id__r.Account.RT_Name_ANA_Form__c =&apos;Fabricator&apos; , NOT(ISPICKVAL(Role__c, &apos;Fabricator&apos;)))</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>The classification of a fabricator contact must be fabricator</errorMessage>
</ValidationRule>