force-app/main/default/objects/Opportunity_Actor__c/validationRules/Contact_role_reseller.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_role_reseller</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Contact_Id__r.Account.RT_Name_ANA_Form__c =&apos;Reseller&apos; , NOT(ISPICKVAL(Role__c, &apos;Reseller&apos;)))</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>The classification of a reseller contact must be reseller</errorMessage>
</ValidationRule>