force-app/main/default/objects/Opportunity_Actor__c/validationRules/Other_account_role.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_account_role</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Account_Role__c, &apos;Other (indicate)&apos;) , ISBLANK(Other_Account_role__c))</errorConditionFormula>
    <errorDisplayField>Other_Account_role__c</errorDisplayField>
    <errorMessage>Please, enter the other role before save</errorMessage>
</ValidationRule>