force-app/main/default/objects/Opportunity_Actor__c/validationRules/Other_contact_role.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_contact_role</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Role__c, &apos;Other (indicate)&apos;) , ISBLANK(Other_Contact_Role__c))</errorConditionFormula>
    <errorDisplayField>Other_Contact_Role__c</errorDisplayField>
    <errorMessage>Please, enter the other role before save</errorMessage>
</ValidationRule>