force-app/main/default/objects/Opportunity_Actor__c/listViews/With_Error.listView-meta.xml
<ListView>
    <fullName>With_Error</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Role__c</columns>
    <columns>Contact_Id__c</columns>
    <columns>Role__c</columns>
    <columns>Is_It_Main__c</columns>
    <columns>SAP_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAP_Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>With Error</label>
</ListView>